# MOP

./: .bandit  .dockerignore  .gitattributes  .gitignore  .semgrepignore  Dockerfile  LICENSE  NOTICE  README.md  docker_run.sh  mop-docker-mac.sh  mop-docker.ps1  mop-docker.sh  mop.py  mop.sln  pyproject.toml  requirements.txt  version_badge.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-ConPTY.yml  codeql-analysis.yml  dependabot-sync.yml  lint_and_typecheck.yml  mypy.yml
ConPTYBridge/: ConPTYBridge.csproj  ConPTYBridge.sln  Program.cs  conpty.py
moppy/: __init__.py  asyncAPI.yaml  asyncapi.html  client.html  config.json  hints.py  index.html  mop_custom_endpoints.json  session.html  ssl_certs.py  utils.py  xterm.html
moppy/C/: build.bat  mop_conpty.cpp  mop_conpty.pyi  mop_conpty_setup.py
moppy/backends/: loader.py
moppy/backends/Datastore/: default.py
moppy/backends/Terminal/: default.py
moppy/plugins/: attic.py  manifest.json  mat.py
moppy/scripts/: cert.py
moppy/tests/running_tests/: test.py
semgrep/: csharp  fastapi  python
