[tool.mypy]
ignore_missing_imports = true
exclude = ['^\.venv.*']
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "ujson.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.uv]
managed = true

[project]
name = "moppy"
version = "1.0.0"
description = "Modular Protocol server"
requires-python = ">=3.12, <3.14"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "rbaxim" }
]

dependencies = [
    # Core Server & Web
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "starlette==0.50.0",
    "pydantic==2.12.5",
    "slowapi==0.1.9",

    # Networking & Async IO
    "aiohttp==3.13.3",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "certifi==2026.1.4",

    # System & Utils
    "psutil==7.2.2",
    "colorama==0.4.6",
    
    # Compression & Encryption
    "cryptography==46.0.4",
    "brotlicffi==1.2.0.0",
    "brotli==1.2.0",
    "brotli-asgi==1.6.0",
    "base91==1.0.1",
    
    # Other internal requirements
    "h11==0.16.0",
]

# Development-only tools (keep your production environment clean)
[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "types-aiofiles==24.1.0.20250822",
    "types-Deprecated==1.3.1.20260130",
    "bandit[sarif, toml]>=1.9.3",
]
windows = [
    "pythonnet==3.0.5",
]
unix = [
    "uvloop==0.22.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "types-aiofiles==24.1.0.20250822",
    "bandit[sarif, toml]>=1.9.3",
]
windows = [
    "pythonnet==3.0.5",
]
unix = [
    "uvloop==0.22.1",
]

[tool.bandit]
skips = ["B603", "B404", "B607", "B605", "B104", "B110", "B101"]
min_severity = "MEDIUM"
min_confidence = "MEDIUM"